--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,14 +23,56 @@
     <string name="login_success">登录成功</string>
     <string name="login_failed">登录失败: </string>
     <string name="invalid_credentials">用户名或密码错误</string>
+    <string name="please_agree_protocol">请先同意用户协议</string>
+    <string name="user_agreement_content"><![CDATA[
+    农产品销售辅助系统用户协议\n\n
 
-    <string name="user_agreement_content">
-    \n
-    欢迎使用本农产品销售辅助系统，请仔细阅读以下条款：\n\n
+    欢迎使用农产品销售辅助系统，请仔细阅读以下条款：\n\n
 
-    1. 用户应保证提供的信息真实有效\n
-    2. 禁止任何非法交易行为\n
-    3. 系统数据仅用于农业交易目的\n
-</string>
+    一、服务内容\n
+    1.1 核心功能模块\n
+    • 销售管理：支持批发/散户销售记录、按日结算、交易报表生成\n
+    • 库存管理：含动态价格调整（天气数据联动）及损耗预警\n
+    • 数据分析：提供销量/价格趋势图（支持自定义时段）\n
+    • 权限体系：4级角色权限（经销商/销售员/进货员/管理员）\n\n
+
+    二、用户责任\n
+    2.1 注册要求\n
+    √ 需提供营业执照及农产品质检报告\n
+    √ 畜禽/水产类需上传检疫证明\n
+    √ 法定代表人身份证件实名认证\n\n
+
+    2.2 操作规范\n
+    • 价格调整误差范围≤5%\n
+    • 每日18:00前完成损耗登记\n
+    • 报表对外使用需标注数据来源\n\n
+
+    三、数据安全\n
+    3.1 加密标准\n
+    采用AES-256加密以下数据：\n
+    - 交易记录（存储5年）\n
+    - 登录凭证（每日自动更新）\n
+    - API通信数据（HTTPS+Token）\n\n
+
+    四、特别提示\n
+    4.1 免责声明\n
+    因下列情况导致的损失不承担责任：\n
+    • 政府监管要求的服务暂停\n
+    • 自然灾害等不可抗力事件\n
+    • 用户未及时登记损耗信息\n\n
+
+    4.2 权限审计\n
+    管理员操作将记录：\n
+    ▶ 用户权限变更（实时日志）\n
+    ▶ 价格规则修改（双人复核）\n\n
+
+    五、协议变更\n
+    5.1 修改通知渠道\n
+    • 注册邮箱（优先）\n
+    • 系统内弹窗公告（持续72h）\n
+    • 官网公示（提前15天）\n\n
+
+    我已阅读并同意上述条款，理解数据安全和经营责任相关约定。
+    ]]></string>
 </resources>
 
