--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,15 @@
         <item>仅显示结清</item>
     </string-array>
 
+
+
     <string name="forgot_password_title">忘记密码</string>
     <string name="contact_admin_message">请联系系统管理员重置密码\n联系电话：135-5555-8889\n邮箱：test1@qq.com</string>
     <string name="ok_button">确定</string>
     <string name="user_agreement_title">用户协议</string>
     <string name="agree_button">同意</string>
     <string name="empty_fields_warning">用户名和密码不能为空</string>
-    <string name="login_success">登录成功</string>
+    <string name="login_success">登录成功！欢迎 %1$s</string>
     <string name="login_failed">登录失败: </string>
     <string name="invalid_credentials">用户名或密码错误</string>
     <string name="please_agree_protocol">请先同意用户协议</string>
