--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
 
     <string name="forgot_password_title">忘记密码</string>
-    <string name="contact_admin_message">请联系系统管理员重置密码\n联系电话：135-5555-8889\n邮箱：test1@qq.com</string>
+    <string name="contact_admin_message">请联系系统管理员重置密码\n邮箱：admin@asale.com</string>
     <string name="ok_button">确定</string>
     <string name="user_agreement_title">用户协议</string>
     <string name="agree_button">同意</string>
